--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,119 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: "Inter", sans-serif;
+.cardWrap {
+  margin: 3em auto;
+  color: #fff;
+  font-family: sans-serif;
+}
+
+.card {
+  background: linear-gradient(
+    to bottom,
+    #f3d55b 0%,
+    #f3d55b 26%,
+    #f4f4f4 26%,
+    #f4f4f4 100%
+  );
+  height: 26em;
+  float: left;
+  position: relative;
+  padding: 1em;
+  margin-top: 100px;
+}
+
+.cardLeft {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  width: 40em;
 
 }
+
+.cardRight {
+  width: 10em;
+  border-left: 0.18em dashed #fff;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.cardRight::before,
+.cardRight::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0.9em;
+  height: 0.9em;
+  background: #fff;
+  border-radius: 50%;
+  left: -0.5em;
+}
+
+.cardRight::before {
+  top: -0.4em;
+}
+
+.cardRight::after {
+  bottom: -0.4em;
+}
+
+h1 {
+  font-size: 1.1em;
+  margin-top: 0;
+}
+
+.title,
+.name,
+.seat,
+.time {
+  text-transform: uppercase;
+  font-weight: normal;
+}
+
+.title h2 {
+  font-size: 0.9em;
+  color: #525252;
+  padding-top: 40px;
+}
+
+.title span,
+.name span,
+.seat span,
+.time span {
+  font-size: 0.7em;
+  color: #a2aeae;
+}
+
+.title {
+  margin: 2em 0 0 0;
+}
+
+.name,
+.seat {
+  margin: 0.7em 0 0 0;
+}
+
+.time {
+  margin: 0.7em 0 0 1em;
+}
+
+.seat,
+.time {
+  float: left;
+}
+
+.number {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.number h3 {
+  color: #e84c3d;
+  margin: 0.9em 0 0 0;
+  font-size: 2.5em;
+}
+
+.number span {
+  display: block;
+  color: #a2aeae;
+}
+
