--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,21 @@
   padding: 1em;
   margin-top: 100px;
 }
+.darkCard {
+  background: linear-gradient(
+    to bottom,
+    #f3d55b 0%,
+    #f3d55b 26%,
+    #09090b 26%,
+    #09090b 100%
+  );
+}
+
 
 .cardLeft {
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
   width: 40em;
-
 }
 
 .cardRight {
@@ -117,4 +126,3 @@ h1 {
   display: block;
   color: #a2aeae;
 }
-
